--- a/package.json
+++ b/package.json
@@ -30,24 +30,37 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.0",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "^11.0.0",
     "@angular/compiler": "^11.0.0",
     "@angular/core": "^11.0.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.0.0",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
+    "@ngrx/effects": "10.0.0",
+    "@ngrx/entity": "10.0.0",
+    "@ngrx/router-store": "10.0.0",
+    "@ngrx/store": "10.0.0",
     "@nrwl/angular": "11.0.20",
+    "firebase": "^8.2.2",
+    "flexboxgrid": "^6.3.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
     "@angular-devkit/build-angular": "~0.1100.1",
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.0.0",
     "@angular/language-service": "^11.0.0",
+    "@ngrx/schematics": "10.0.0",
+    "@ngrx/store-devtools": "10.0.0",
     "@nrwl/cli": "11.0.20",
+    "@nrwl/cypress": "11.0.20",
     "@nrwl/jest": "11.0.20",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "11.0.20",
@@ -55,16 +68,20 @@
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
     "codelyzer": "^6.0.0",
+    "cypress": "^5.5.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
+    "open": "^7.0.3",
     "prettier": "2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3",
-    "cypress": "^5.5.0",
-    "@nrwl/cypress": "11.0.20"
+    "typescript": "~4.0.3"
   }
 }
