--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Sensible information
+apps/vakers/src/environments/environment.ts
+
 # compiled output
 /dist
 /tmp
