--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Sensible information
+apps/vakers/src/environments/environment.prod.ts
 apps/vakers/src/environments/environment.ts
 
 # compiled output
